byteForge/src/styles/productCard.scss
@use "@/styles/mixins/mixins" as m;
@use "@/styles/variables" as v;

.product-card {
  @include m.flexCenter;
  flex-direction: column;

  gap: 0.25em;

  width: 6.5rem;

  padding: 0.5em 0;

  transition: scale, 150ms ease;

  &:active {
    scale: 105%;
  }

  img {
    width: 6.5rem;
    height: 6.5rem;
    background-color: v.$section-bg;

    object-fit: cover;

    border-radius: 0.3rem;
  }

  .name,
  .price {
    text-align: center;
    width: 100%;
  }

  .name {
    font-size: v.$fs-body;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    padding: 0 0.25rem;
  }

  .price {
    font-size: v.$fs-small;

    color: v.$accent-2;
  }

  @media (min-width: v.$desktop) {
    & {
      gap: 0.5rem;

      width: 10rem;
    }

    img {
      width: 100%;
      height: 100%;
    }

  }
}

